# python-project-52

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter-and-tests.yml
task_manager/: settings.py
task_manager/templates/: base.html  index.html
